vpc/3-vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = var.cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_hostnames
  tags = merge(
    var.tags,
    var.vpc_tags
  )
}
